--- a/index.html
+++ b/index.html
@@ -17,8 +17,51 @@
     </nav>
 
     <div class="container">
-        <h1>Best of NCS - No Copyright Sounds</h1>
-        <div class="songList"></div>
+        <div class="songList">
+            <h1>Best of NCS - No Copyright Sounds</h1>
+            <div class="songItemContainer">
+                <div class="songItem">
+                    <img src="covers/1.jpg" alt="1">
+                    <span>Let me love you</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i class="fa-solid fa-circle-play"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img src="covers/1.jpg" alt="1">
+                    <span>Let me love you</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i class="fa-solid fa-circle-play"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img src="covers/1.jpg" alt="1">
+                    <span>Let me love you</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i class="fa-solid fa-circle-play"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img src="covers/1.jpg" alt="1">
+                    <span>Let me love you</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i class="fa-solid fa-circle-play"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img src="covers/1.jpg" alt="1">
+                    <span>Let me love you</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i class="fa-solid fa-circle-play"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img src="covers/1.jpg" alt="1">
+                    <span>Let me love you</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i class="fa-solid fa-circle-play"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img src="covers/1.jpg" alt="1">
+                    <span>Let me love you</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i class="fa-solid fa-circle-play"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img src="covers/1.jpg" alt="1">
+                    <span>Let me love you</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i class="fa-solid fa-circle-play"></i></span></span>
+                </div>
+            </div>
+        </div>
         <div class="songBanner"></div>
     </div>
 
@@ -26,8 +69,16 @@
         <input type="range" name="range" id="myProgressBar" min="0" max="100">
         <div class="icons">
             <!-- fontawesome icons -->
+            <i class="fa-solid fa-3x fa-backward-step"></i>
+            <i class="fa-solid fa-3x fa-circle-play"></i>
+            <i class="fa-solid fa-3x fa-forward-step"></i>
+        </div>
+        <div class="songInfo">
+            <img src="playing.gif" width="42px" alt=""> let me love you - Justin Beiber 
         </div>
     </div>
+
+    <script src="https://kit.fontawesome.com/b3f91d3ae8.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 </html>
