--- a/index.html
+++ b/index.html
@@ -22,59 +22,65 @@
             <div class="songItemContainer">
                 <div class="songItem">
                     <img src="covers/1.jpg" alt="1">
-                    <span>Let me love you</span>
+                     class="songName" love you</span>
                     <span class="songlistplay"><span class="timestamp">05:34 <i class="fa-solid fa-circle-play"></i></span></span>
                 </div>
                 <div class="songItem">
                     <img src="covers/1.jpg" alt="1">
-                    <span>Let me love you</span>
+                     class="songName" love you</span>
                     <span class="songlistplay"><span class="timestamp">05:34 <i class="fa-solid fa-circle-play"></i></span></span>
                 </div>
                 <div class="songItem">
                     <img src="covers/1.jpg" alt="1">
-                    <span>Let me love you</span>
+                     class="songName" love you</span>
                     <span class="songlistplay"><span class="timestamp">05:34 <i class="fa-solid fa-circle-play"></i></span></span>
                 </div>
                 <div class="songItem">
                     <img src="covers/1.jpg" alt="1">
-                    <span>Let me love you</span>
+                     class="songName" love you</span>
                     <span class="songlistplay"><span class="timestamp">05:34 <i class="fa-solid fa-circle-play"></i></span></span>
                 </div>
                 <div class="songItem">
                     <img src="covers/1.jpg" alt="1">
-                    <span>Let me love you</span>
+                     class="songName" love you</span>
                     <span class="songlistplay"><span class="timestamp">05:34 <i class="fa-solid fa-circle-play"></i></span></span>
                 </div>
                 <div class="songItem">
                     <img src="covers/1.jpg" alt="1">
-                    <span>Let me love you</span>
+                     class="songName" love you</span>
                     <span class="songlistplay"><span class="timestamp">05:34 <i class="fa-solid fa-circle-play"></i></span></span>
                 </div>
                 <div class="songItem">
                     <img src="covers/1.jpg" alt="1">
-                    <span>Let me love you</span>
+                     class="songName" love you</span>
                     <span class="songlistplay"><span class="timestamp">05:34 <i class="fa-solid fa-circle-play"></i></span></span>
                 </div>
                 <div class="songItem">
                     <img src="covers/1.jpg" alt="1">
-                    <span>Let me love you</span>
+                     class="songName" love you</span>
                     <span class="songlistplay"><span class="timestamp">05:34 <i class="fa-solid fa-circle-play"></i></span></span>
                 </div>
+                <div class="songItem">
+                    <img src="covers/1.jpg" alt="1">
+                    <span class="songName">Let me love you</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i class="fa-solid fa-circle-play"></i></span></span>
+                </div>
+                
             </div>
         </div>
         <div class="songBanner"></div>
     </div>
 
     <div class="bottom">
-        <input type="range" name="range" id="myProgressBar" min="0" max="100">
+        <input type="range" name="range" id="myProgressBar" min="0" value="0" max="100">
         <div class="icons">
             <!-- fontawesome icons -->
             <i class="fa-solid fa-3x fa-backward-step"></i>
-            <i class="fa-solid fa-3x fa-circle-play"></i>
+            <i class="fa-solid fa-3x fa-circle-play" id="masterPlay"></i>
             <i class="fa-solid fa-3x fa-forward-step"></i>
         </div>
         <div class="songInfo">
-            <img src="playing.gif" width="42px" alt=""> let me love you - Justin Beiber 
+            <img src="playing.gif" width="42px" alt="" id="gif"> let me love you - Justin Beiber 
         </div>
     </div>
 
