--- a/index.html
+++ b/index.html
@@ -21,49 +21,49 @@
             <h1>Best of NCS - No Copyright Sounds</h1>
             <div class="songItemContainer">
                 <div class="songItem">
-                    <img src="covers/1.jpg" alt="1">
-                     class="songName" love you</span>
-                    <span class="songlistplay"><span class="timestamp">05:34 <i class="fa-solid fa-circle-play"></i></span></span>
+                    <img  alt="1">
+                     <span class="songName">Let me love you</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i id="0" class="fa-solid songItemPlay fa-circle-play"></i></span></span>
                 </div>
                 <div class="songItem">
-                    <img src="covers/1.jpg" alt="1">
-                     class="songName" love you</span>
-                    <span class="songlistplay"><span class="timestamp">05:34 <i class="fa-solid fa-circle-play"></i></span></span>
-                </div>
-                <div class="songItem">
-                    <img src="covers/1.jpg" alt="1">
-                     class="songName" love you</span>
-                    <span class="songlistplay"><span class="timestamp">05:34 <i class="fa-solid fa-circle-play"></i></span></span>
-                </div>
-                <div class="songItem">
-                    <img src="covers/1.jpg" alt="1">
-                     class="songName" love you</span>
-                    <span class="songlistplay"><span class="timestamp">05:34 <i class="fa-solid fa-circle-play"></i></span></span>
-                </div>
-                <div class="songItem">
-                    <img src="covers/1.jpg" alt="1">
-                     class="songName" love you</span>
-                    <span class="songlistplay"><span class="timestamp">05:34 <i class="fa-solid fa-circle-play"></i></span></span>
-                </div>
-                <div class="songItem">
-                    <img src="covers/1.jpg" alt="1">
-                     class="songName" love you</span>
-                    <span class="songlistplay"><span class="timestamp">05:34 <i class="fa-solid fa-circle-play"></i></span></span>
-                </div>
-                <div class="songItem">
-                    <img src="covers/1.jpg" alt="1">
-                     class="songName" love you</span>
-                    <span class="songlistplay"><span class="timestamp">05:34 <i class="fa-solid fa-circle-play"></i></span></span>
-                </div>
-                <div class="songItem">
-                    <img src="covers/1.jpg" alt="1">
-                     class="songName" love you</span>
-                    <span class="songlistplay"><span class="timestamp">05:34 <i class="fa-solid fa-circle-play"></i></span></span>
-                </div>
-                <div class="songItem">
-                    <img src="covers/1.jpg" alt="1">
+                    <img  alt="1">
                     <span class="songName">Let me love you</span>
-                    <span class="songlistplay"><span class="timestamp">05:34 <i class="fa-solid fa-circle-play"></i></span></span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i id="1" class="fa-solid songItemPlay fa-circle-play"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img  alt="1">
+                     <span class="songName">Let me love you</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i id="2" class="fa-solid songItemPlay fa-circle-play"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img  alt="1">
+                     <span class="songName">Let me love you</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i id="3" class="fa-solid songItemPlay fa-circle-play"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img  alt="1">
+                     <span class="songName">Let me love you</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i id="4" class="fa-solid songItemPlay fa-circle-play"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img  alt="1">
+                     <span class="songName">Let me love you</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i id="5" class="fa-solid songItemPlay fa-circle-play"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img  alt="1">
+                     <span class="songName">Let me love you</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i id="6" class="fa-solid songItemPlay fa-circle-play"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img  alt="1">
+                     <span class="songName">Let me love you</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i id="7" class="fa-solid songItemPlay fa-circle-play"></i></span></span>
+                </div>
+                <div class="songItem">
+                    <img  alt="1">
+                    <span class="songName">Let me love you</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i id="8"  class="fa-solid songItemPlay fa-circle-play"></i></span></span>
                 </div>
                 
             </div>
