--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
         <input type="range" name="range" id="myProgressBar" min="0" value="0" max="100">
         <div class="icons">
             <!-- fontawesome icons -->
-            <i class="fa-solid fa-3x fa-backward-step"></i>
+            <i class="fa-solid fa-3x fa-backward-step" id="previous"></i>
             <i class="fa-solid fa-3x fa-circle-play" id="masterPlay"></i>
-            <i class="fa-solid fa-3x fa-forward-step"></i>
+            <i class="fa-solid fa-3x fa-forward-step" id="next"></i>
         </div>
         <div class="songInfo">
-            <img src="playing.gif" width="42px" alt="" id="gif"> let me love you - Justin Beiber 
+            <img src="playing.gif" width="42px" alt="" id="gif"> <span id="masterSongName">1 Salam-e-Ishq</span>
         </div>
     </div>
 
